--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <div id="root"><h1>WEBPACK 1 2</h1><h1>WEBPACK 1 2</h1><h1>WEBPACK 1 2</h1></div>
+    <div id="root"></div>
 </body>
 </html>
